--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 @import "tailwindcss";
+
+@theme {
+  --animate-fadeIn: fadeIn 1s ease-in-out;
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+}
