style: login UI
- 로그인 UI 구현
  - 모달 적용

  - supabase auth 테스트

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,17 @@
     }
   }
 }
+
+@layer components {
+  .hide-scroll {
+    /* 웹킷 브라우저 (Chrome, Safari) */
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
+    /* 기타 브라우저 */
+    &::scroll {
+      display: none;
+    }
+  }
+}
