Add chat functionality
- 채팅 기능 추가
  - 스타일링 모듈 CSS에서 테일윈드로 전환

- 배너 리팩토링
  - timezone 연산 코드 개선

  - cloud seed 연산 코드 개선

- 디렉터리 정리
  - 관련 파일 재배치

- 애니메이션 개선
  - 배너 자체 페이드인

- 또 다른 프로젝트 섹션 수정
  - realtime chat 저장소 링크 반영

- 리드미 수정
  - 디렉터리 관리 중 디렉터리 깊이 무관 문구 삭제

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,4 +10,32 @@
       opacity: 1;
     }
   }
+
+  @keyframes pulse {
+    0% {
+      transform: scale(80%);
+    }
+    50% {
+      transform: scale(100%);
+    }
+    100% {
+      transform: scale(80%);
+    }
+  }
+}
+
+@layer utilities {
+  .box-content {
+    box-sizing: content-box !important;
+  }
+}
+
+@layer base {
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
+  html {
+    scrollbar-width: none;
+  }
 }
